derive/tests/snapshots/multiple_table_attributes/Gadget/get_all_gadgets2.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `gadget2` table.
    pub fn get_all_gadgets2<'a>(&'a self) -> impl Iterator<Item = Gadget> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().gadget2().iter()
    }
}
