derive/tests/snapshots/multiple_table_attributes/Gadget/table.snap
---
source: derive/src/characterization_tests.rs
---
#[derive(
    Clone,
    Debug,
    PartialEq,
    PartialOrd,
    Eq,
    Ord,
    Hash,
    ::spacetimedb::SpacetimeType
)]
pub struct GadgetId {
    value: u64,
}
impl Default for GadgetId {
    fn default() -> GadgetId {
        GadgetId {
            value: Default::default(),
        }
    }
}
impl std::fmt::Display for GadgetId {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        write!(f, "{} {{ id: {:?} }}", "GadgetId", self.value)
    }
}
impl crate::spacetimedsl::Wrapper<u64> for GadgetId {
    fn new(value: u64) -> Self {
        Self { value }
    }
    fn value(&self) -> u64 {
        self.value.clone()
    }
}
impl From<&Gadget> for GadgetId {
    fn from(value: &Gadget) -> Self {
        GadgetId {
            value: value.id.clone(),
        }
    }
}
impl From<&Gadget> for Option<GadgetId> {
    fn from(value: &Gadget) -> Option<GadgetId> {
        Some(GadgetId {
            value: value.id.clone(),
        })
    }
}
impl From<&GadgetId> for Option<GadgetId> {
    fn from(value: &GadgetId) -> Option<GadgetId> {
        use crate::spacetimedsl::Wrapper;
        Some(GadgetId::new(value.value()))
    }
}
impl From<&GadgetId> for GadgetId {
    fn from(value: &GadgetId) -> Self {
        use crate::spacetimedsl::Wrapper;
        GadgetId::new(value.value())
    }
}
impl Gadget {
    ///
    pub fn get_id(&self) -> GadgetId {
        use crate::spacetimedsl::Wrapper;
        GadgetId::new(self.id.clone())
    }
    ///
    pub fn get_owner_id(&self) -> &u64 {
        use crate::spacetimedsl::Wrapper;
        &self.owner_id
    }
    ///
    pub fn get_owner_id_mut(&mut self) -> &mut u64 {
        use crate::spacetimedsl::Wrapper;
        &mut self.owner_id
    }
    ///
    pub fn set_owner_id(&mut self, owner_id: u64) -> u64 {
        use crate::spacetimedsl::Wrapper;
        let old_value = std::mem::replace(&mut self.owner_id, owner_id);
        old_value
    }
}
///
pub struct CreateGadget2 {
    pub owner_id: u64,
}

// Generated DSL methods:
// count_of_all_gadgets2
// create_gadget2
// delete_gadget2_by_id
// get_all_gadgets2
// get_gadget2_by_id
// update_gadget2_by_id
