derive/tests/snapshots/multiple_table_attributes/Gadget/update_gadget2_by_id.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to update a `Gadget` row of the `gadget2` table whose value matches the value from the unique single-column btree index on the `id` column.*/
    pub fn update_gadget2_by_id<'a>(
        &'a self,
        gadget2: Gadget,
    ) -> Result<Gadget, crate::spacetimedsl::error::SpacetimeDSLError> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        let mut gadget2 = gadget2;
        let gadget2 = self.db().gadget2().id().update(gadget2);
        Ok(gadget2)
    }
}
